--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "intersection-observer": "^0.12.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
