--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.4",
+    "graphql": "^16.5.0",
     "intersection-observer": "^0.12.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
