--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "vercel-build": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server",
+    "dev": "webpack-dev-server --history-api-fallback",
     "lint": "standard",
     "lint:fix": "standard --fix"
   },
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.4",
+    "@reach/router": "^1.3.4",
     "graphql": "^16.5.0",
     "intersection-observer": "^0.12.0",
     "react": "^18.1.0",
