--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@reach/router": "^1.3.4",
     "graphql": "^16.5.0",
     "intersection-observer": "^0.12.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
