--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "vercel": "^24.2.2",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "webpack-dev-server": "^4.9.0",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "@apollo/client": "^3.6.4",
